# face_attendance_system_web

./: .dockerignore  .env  .env.example  00_START_HERE.md  BACKEND_IMPLEMENTATION_PLAN.md  BACKEND_STATUS.md  CONTINUATION_SESSION_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_COMPLETE_STATUS.md  DEPLOYMENT_SUCCESS.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_STATUS.md  DOCKER_QUICK_DEPLOY.md  Dockerfile  FINAL_PROJECT_STATUS.md  INTEGRATION_TESTING_GUIDE.md  PHASE_5_AND_PROJECT_COMPLETE.md  PHASE_5_COMPLETION.md  PHASE_5_FINAL_SUMMARY.md  PHASE_5_FRONTEND_PLAN.md  PHASE_5_PROGRESS.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_MANIFEST.md  PROJECT_READY_FOR_DEPLOYMENT.md  PROJECT_STATUS.md  README_PROJECT_INDEX.md  SESSION_SUMMARY.md  backend-plan.txt  docker-compose.backend.yml  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
backend/: .env.example  .gitignore  API_REFERENCE.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  PHASE_1_COMPLETE.md  PHASE_2_CAMERA_MANAGEMENT.md  PHASE_3_DETECTION_GUIDE.md  PHASE_3_PROGRESS.md  PHASE_4_ATTENDANCE_GUIDE.md  PHASE_4_PROGRESS.md  PROGRESS.md  README.md  SESSION_2_SUMMARY.md  SESSION_3_SUMMARY.md  SESSION_SUMMARY.md  TODO.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py  attendance.py  attendance_ws.py  auth.py  cameras.py  detections.py  persons.py  roles.py  users.py
backend/app/core/: celery_app.py  config.py  deps.py  errors.py  logging.py  redis.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  attendance.py  camera.py  detection.py  mixins.py  person.py  user.py
backend/app/repositories/: attendance.py  camera.py  detection.py  person.py
backend/app/schemas/: __init__.py  attendance.py  camera.py  common.py  detection.py  person.py  user.py
backend/app/services/: attendance_service.py  auto_attendance.py  camera_service.py  detection_provider.py  detection_service.py  face_recognition_service.py  ffmpeg_service.py  person_service.py  storage_service.py  websocket_manager.py
backend/docker/: Dockerfile.api  Dockerfile.worker
backend/scripts/: __init__.py  seed_data.py
backend/tests/integration/: test_auth_endpoints.py
backend/tests/unit/: test_auth_service.py
backend/worker/: celery_app.py
backend/worker/tasks/: attendance.py  cleanup.py  detection.py  monitoring.py
docker/: Dockerfile.frontend  nginx-default.conf  nginx.conf
docs/: DETECTION_PROVIDER_DESIGN.md
src/: App.tsx  index.css  main.tsx
src/components/alerts/: AlertDropdown.tsx  AlertList.tsx
src/components/analytics/: TrendSparkline.tsx
src/components/attendance/: AttendanceLogTable.tsx  AttendanceTable.tsx
src/components/camera/: CameraCard.tsx  CameraStreamGrid.tsx  CameraStreamTile.tsx  DetectionList.tsx  LiveStreamViewport.tsx
src/components/faces/: FaceGallery.tsx  FaceRegistrationForm.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/status/: StatusIndicator.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx
src/context/: AuthContext.tsx  NotificationContext.tsx  RoleContext.tsx
src/data/: mockData.ts
src/hooks/: useLiveClock.ts  usePolling.ts
src/layouts/: AppLayout.tsx
src/pages/: Alerts.tsx  Attendance.tsx  AttendanceIntegrated.tsx  AuditLog.tsx  Cameras.tsx  Dashboard.tsx  Developer.tsx  FaceRegister.tsx  FaceRegistrationIntegrated.tsx  History.tsx  LiveView.tsx  LiveViewIntegrated.tsx  Login.tsx  PersonManagementIntegrated.tsx  Reports.tsx  ReportsIntegrated.tsx  Settings.tsx  SystemHealth.tsx
src/services/: apiClient.ts  mockApi.ts  websocket.ts
src/types/: index.ts
src/utils/: formatters.ts
