[tool.poetry]
name = "face-attendance-backend"
version = "0.1.0"
description = "FastAPI backend for CCTV Face Attendance System"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{include = "app"}, {include = "worker"}]

[tool.poetry.dependencies]
python = "^3.11"

# FastAPI & Server
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"

# Database
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"

# Data Validation
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"

# Redis & Caching
redis = "^5.0.1"
hiredis = "^2.3.2"

# Celery & Background Jobs
celery = {extras = ["redis"], version = "^5.3.6"}
flower = "^2.0.1"

# Authentication & Security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"
cryptography = "^42.0.0"

# HTTP Client
httpx = "^0.26.0"

# MinIO / S3
boto3 = "^1.34.30"
minio = "^7.2.3"

# FFmpeg (Python wrapper)
ffmpeg-python = "^0.2.0"

# Utilities
python-dateutil = "^2.8.2"
pytz = "^2024.1"

# Monitoring & Logging
python-json-logger = "^2.0.7"

# System Monitoring
psutil = "^5.9.8"

# Report Generation
reportlab = "^4.0.9"
weasyprint = "^60.2"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"

# Code Quality
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"
isort = "^5.13.2"

# Type Stubs
types-redis = "^4.6.0.20240106"
types-python-dateutil = "^2.8.19.20240106"
types-pytz = "^2024.1.0.20240203"

# Load Testing
locust = "^2.20.0"

# Development Tools
ipython = "^8.20.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 120
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "ffmpeg.*",
    "minio.*",
    "reportlab.*",
    "weasyprint.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov=worker",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["app", "worker"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
